test/constBlockConsuming15_2.slq

def foo(x:ğ”¹){
	y:=dup(x);
	if y{
		z:=X(y); /// error
		x:=H(x);
	}else{
		z:=y;
	}
	return (x,z);
}
